chapter5/external-svc-external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-svc-external-name
spec:
  # 外部服务
  type: ExternalName
  externalName: "www.qq.com"
  # 无选择器
  ports:
    - port: 443
