chapter5/external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-svc
spec:
  # 无选择器
  ports:
    - port: 80
