chapter5/kubia-svc-all.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-all
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
  publishNotReadyAddresses: true
