chapter5/kubia-svc-client-ip-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  sessionAffinity: ClientIP # 会话亲和性
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
