chapter5/kubia-svc-use-named-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  selector:
    app: kubia-named-port
  ports:
    - port: 80
      name: http
      targetPort: http
    - port: 443
      name: https
      targetPort: https
